3.App_with_istio/3-application-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx
