3.App_with_istio/virtualsvc.yml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: my-virtualsvc
  namespace: default
spec:
  hosts:
    - nginx-svc.default.svc.cluster.local  
  http:
    - route:
        - destination:
            host: nginx-svc.default.svc.cluster.local 
            subset: newapp-group  
          weight: 100
        - destination:
            host: nginx-svc.default.svc.cluster.local
            subset: oldapp-group
          weight: 0
---
kind: DestinationRule      
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: first-destination-rule
  namespace: default
spec:
  host: nginx-svc.default.svc.cluster.local 
  subsets:
    - labels:   
        version: v1
      name: oldapp-group
    - labels:
        version: v2
      name: newapp-group
